--- a/UpGradMovies/app/src/main/res/values/strings.xml
+++ b/UpGradMovies/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name">UpGradMovies</string>
-    <string name="api_key">mail_me_at_n.arrow001@gmail.com_for_api_key</string>
+    <string name="api_key">28fe9f5849e604a7ae225f5202180d5e</string>
     <string name="poster_base">http://image.tmdb.org/t/p/w185</string>
     <string name="poster_base_large">http://image.tmdb.org/t/p/w780</string>
     <string name="hello_blank_fragment">Hello blank fragment</string>
